app/operator/rmq-demo-operator/assets/manifests/rmq-publisher-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rmq-publisher
  labels:
    app: rmq-publisher
spec:
  type: NodePort
  selector:
    app: rmq-publisher
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
