app/operator/rmq-demo-operator/assets/manifests/rmq-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmq-ingress
spec:
  rules:
    - http:
        paths:
          - path: /publisher
            pathType: Prefix
            backend:
              service:
                name: rmq-publisher
                port:
                  number: 4001
          - path: /consumer
            pathType: Prefix
            backend:
              service:
                name: rmq-consumer
                port:
                  number: 4002
